:bug: fix: Horizontal scroll in index.html file

--- a/assets/css/components/_header.css
+++ b/assets/css/components/_header.css
@@ -18,13 +18,16 @@
   display: flex;
   height: 40px;
   align-items: center;
-  margin-left: 48px;
   padding-top: 48px;
   width: 100%;
 }
 
 .header-logo {
   display: none;
+}
+
+.menu {
+  padding-left: 48px; 
 }
 
 .menu__list {
@@ -71,7 +74,7 @@
 
   .menu {
     position: static;
-    margin-left: 65px; 
+    padding-left: 65px; 
     width: 100%;
   }
 
